[tool.poetry]
name = "acemoglu-lecture"
version = "0.1.0"
description = "Some notes on the lecture notes by Acemoglu"
authors = ["fretchen <fred.jendrzejewski@gmail.com>"]
license = "Unlicence"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
jupyter-book = "^1.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
